tests/baselines/reference/parser.asyncGenerators.classMethods.es2018.errors.txt
asyncGeneratorGetAccessorIsError.ts(2,17): error TS1005: '(' expected.
asyncGeneratorPropertyIsError.ts(2,15): error TS1005: '(' expected.
asyncGeneratorSetAccessorIsError.ts(2,17): error TS1005: '(' expected.
awaitInParameterInitializerIsError.ts(2,19): error TS2524: 'await' expressions cannot be used in a parameter initializer.
awaitMissingValueIsError.ts(3,14): error TS1109: Expression expected.
awaitParameterIsError.ts(2,15): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
nestedFunctionDeclarationNamedAwaitIsError.ts(3,18): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
nestedFunctionDeclarationNamedYieldIsError.ts(3,18): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
nestedFunctionExpressionNamedAwaitIsError.ts(3,28): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
nestedFunctionExpressionNamedYieldIsError.ts(3,28): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
yieldAsTypeIsStrictError.ts(4,16): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
yieldInClassComputedPropertyIsError.ts(2,14): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
yieldInClassComputedPropertyIsError.ts(2,14): error TS2693: 'yield' only refers to a type, but is being used as a value here.
yieldInParameterInitializerIsError.ts(2,19): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
yieldParameterIsError.ts(2,15): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
yieldStarMissingValueIsError.ts(3,16): error TS1109: Expression expected.


==== methodIsOk.ts (0 errors) ====
    class C1 {
        async * f() {
        }
    }
==== awaitMethodNameIsOk.ts (0 errors) ====
    class C2 {
        async * await() {
        }
    }
==== yieldMethodNameIsOk.ts (0 errors) ====
    class C3 {
        async * yield() {
        }
    }
==== awaitParameterIsError.ts (1 errors) ====
    class C4 {
        async * f(await) {
                  ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
        }
    }
==== yieldParameterIsError.ts (1 errors) ====
    class C5 {
        async * f(yield) {
                  ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        }
    }
==== awaitInParameterInitializerIsError.ts (1 errors) ====
    class C6 {
        async * f(a = await 1) {
                      ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
        }
    }
==== yieldInParameterInitializerIsError.ts (1 errors) ====
    class C7 {
        async * f(a = yield) {
                      ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
        }
    }
==== nestedAsyncGeneratorIsOk.ts (0 errors) ====
    class C8 {
        async * f() {
            async function * g() {
            }
        }
    }
==== nestedFunctionDeclarationNamedYieldIsError.ts (1 errors) ====
    class C9 {
        async * f() {
            function yield() {
                     ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
            }
        }
    }
==== nestedFunctionExpressionNamedYieldIsError.ts (1 errors) ====
    class C10 {
        async * f() {
            const x = function yield() {
                               ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
            };
        }
    }
==== nestedFunctionDeclarationNamedAwaitIsError.ts (1 errors) ====
    class C11 {
        async * f() {
            function await() {
                     ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
            }
        }
    }
==== nestedFunctionExpressionNamedAwaitIsError.ts (1 errors) ====
    class C12 {
        async * f() {
            const x = function await() {
                               ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
            };
        }
    }
==== yieldIsOk.ts (0 errors) ====
    class C13 {
        async * f() {
            yield;
        }
    }
==== yieldWithValueIsOk.ts (0 errors) ====
    class C14 {
        async * f() {
            yield 1;
        }
    }
==== yieldStarMissingValueIsError.ts (1 errors) ====
    class C15 {
        async * f() {
            yield *;
                   ~
!!! error TS1109: Expression expected.
        }
    }
==== yieldStarWithValueIsOk.ts (0 errors) ====
    class C16 {
        async * f() {
            yield * [];
        }
    }
==== awaitWithValueIsOk.ts (0 errors) ====
    class C17 {
        async * f() {
            await 1;
        }
    }
==== awaitMissingValueIsError.ts (1 errors) ====
    class C18 {
        async * f() {
            await;
                 ~
!!! error TS1109: Expression expected.
        }
    }
==== awaitAsTypeIsOk.ts (0 errors) ====
    interface await {}
    class C19 {
        async * f() {
            let x: await;
        }
    }
==== yieldAsTypeIsStrictError.ts (1 errors) ====
    interface yield {}
    class C20 {
        async * f() {
            let x: yield;
                   ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        }
    }
==== yieldInClassComputedPropertyIsError.ts (2 errors) ====
    class C21 {
        async * [yield]() {
                 ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
                 ~~~~~
!!! error TS2693: 'yield' only refers to a type, but is being used as a value here.
        }
    }
==== yieldInNestedComputedPropertyIsOk.ts (0 errors) ====
    class C22 {
        async * f() {
            const x = { [yield]: 1 };
        }
    }
==== asyncGeneratorGetAccessorIsError.ts (1 errors) ====
    class C23 {
        async * get x() {
                    ~
!!! error TS1005: '(' expected.
            return 1;
        }
    }
==== asyncGeneratorSetAccessorIsError.ts (1 errors) ====
    class C24 {
        async * set x(value: number) {
                    ~
!!! error TS1005: '(' expected.
        }
    }
==== asyncGeneratorPropertyIsError.ts (1 errors) ====
    class C25 {
        async * x = 1;
                  ~
!!! error TS1005: '(' expected.
    }
    